Anti-kibitzer: corrected positioning bug on tablets/etc.

--- a/www/style-rts.linux.css
+++ b/www/style-rts.linux.css
@@ -3201,13 +3201,19 @@ li {
 #theme-selector ~ #anti-kibitzer-toggle {
 	top: 100%;
 	bottom: unset;
+	left: 0;
+	right: 0;
+	margin: auto;
 	box-shadow: none;
+	width: calc(100vw - 44px);
+	max-width: 330px;
+	text-align: right;
+	pointer-events: none;
 }
 #theme-selector.engaged ~ #anti-kibitzer-toggle {
 	visibility: visible;
-	z-index: 11111;
+	z-index: 11110;
 	top: 530px;
-	right: 22px;
 	transition: 
 		top 0.2s ease,
 		visibility 0.2s ease;
@@ -3216,6 +3222,10 @@ li {
 	#theme-selector.engaged ~ #anti-kibitzer-toggle {	
 		top: 492px;
 	}
+}
+#theme-selector.engaged ~ #anti-kibitzer-toggle button {
+	pointer-events: auto;
+	display: inline-block;
 }
 
 /*=================*/
